Add sync method